<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/overviewFragment">

    <fragment
        android:id="@+id/overviewFragment"
        android:name="com.arditb.cryptotodate.overview.OverviewFragment"
        android:label="OverviewFragment"
        tools:layout="@layout/fragment_overview">
        <action
            android:id="@+id/action_showDetail"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.arditb.cryptotodate.detail.DetailFragment"
        android:label="DetailFragment"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="cryptoItem"
            app:argType="com.arditb.cryptotodate.network.CryptoItem"/>
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.arditb.cryptotodate.settings.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/converterFragment"
        android:name="com.arditb.cryptotodate.converter.ConverterFragment"
        android:label="fragment_converter"
        tools:layout="@layout/fragment_converter" />
    <fragment
        android:id="@+id/otherFragment"
        android:name="com.arditb.cryptotodate.other.OtherFragment"
        android:label="fragment_other"
        tools:layout="@layout/fragment_other" />
</navigation>