<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/other_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    tools:context=".other.OtherFragment">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginBottom="15dp"
    android:text="The photo will be displayed during the night"/>
    <Button
        android:id="@+id/btnVibrate"
        android:text="Touch to vibrate"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"/>


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/display_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/night"/>



</LinearLayout>